--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>3.8.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -80,6 +85,32 @@
                   <target>8</target>
               </configuration>
           </plugin>
+          <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-jar-plugin</artifactId>
+                  <configuration>
+                      <archive>
+                          <manifest>
+                              <mainClass>io.joshatron.cli.App</mainClass>
+                          </manifest>
+                      </archive>
+                  </configuration>
+              </plugin>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-shade-plugin</artifactId>
+                  <executions>
+                      <execution>
+                          <phase>package</phase>
+                          <goals>
+                              <goal>shade</goal>
+                          </goals>
+                      </execution>
+                  </executions>
+                  <configuration>
+                      <finalName>${artifactId}-${version}</finalName>
+                  </configuration>
+              </plugin>
       </plugins>
   </build>
 </project>
