--- a/tak-cli/pom.xml
+++ b/tak-cli/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.joshatron</groupId>
-  <artifactId>tak</artifactId>
+  <artifactId>tak-cli</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>tak</name>
+  <name>tak-cli</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -39,6 +39,16 @@
       <groupId>org.jline</groupId>
       <artifactId>jline</artifactId>
       <version>3.8.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.joshatron</groupId>
+      <artifactId>tak-engine</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>io.joshatron</groupId>
+      <artifactId>tak-ai</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
