--- a/tak-ai/pom.xml
+++ b/tak-ai/pom.xml
@@ -96,7 +96,7 @@
                   <configuration>
                       <archive>
                           <manifest>
-                              <mainClass>io.joshatron.takcli.cli.App</mainClass>
+                              <mainClass>io.joshatron.tak.cli.app.App</mainClass>
                           </manifest>
                       </archive>
                   </configuration>
