--- a/tak-ai/pom.xml
+++ b/tak-ai/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>io.joshatron</groupId>
       <artifactId>tak-engine</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 
