--- a/tak-engine/pom.xml
+++ b/tak-engine/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.joshatron</groupId>
   <artifactId>tak-engine</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>tak-engine</name>
   <!-- FIXME change it to the project's website -->
