started implementing gamedao

--- a/tak-server/pom.xml
+++ b/tak-server/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.23.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.joshatron</groupId>
+            <artifactId>tak-engine</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
