--- a/tak-server/pom.xml
+++ b/tak-server/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>tak-engine</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
