--- a/tak-server/src/main/resources/application.properties
+++ b/tak-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8080
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=takserver
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=takserver
